--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.3",
+    "pg": "^8.1.0",
+    "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "socket.io": "^2.3.0"
+    "sequelize": "^5.21.8",
+    "sequelize-cli": "^5.5.1",
+    "socket.io": "^2.3.0",
+    "uuid": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
