--- a/package.json
+++ b/package.json
@@ -1,44 +1,52 @@
 {
-  "name": "message-app",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "express": "^4.17.1",
-    "nodemon": "^2.0.3",
-    "pg": "^8.1.0",
-    "pg-hstore": "^2.3.3",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.5",
-    "sequelize": "^5.21.8",
-    "sequelize-cli": "^5.5.1",
-    "socket.io": "^2.3.0",
-    "uuid": "^8.0.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "message-app",
+	"version": "0.1.0",
+	"private": true,
+
+	"dependencies": {
+		"@testing-library/jest-dom": "^4.2.4",
+		"@testing-library/react": "^9.5.0",
+		"@testing-library/user-event": "^7.2.1",
+		"express": "^4.17.1",
+		"nodemon": "^2.0.3",
+		"pg": "^8.1.0",
+		"pg-hstore": "^2.3.3",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "3.4.1",
+		"redux": "^4.0.5",
+		"sequelize": "^5.21.8",
+		"sequelize-cli": "^5.5.1",
+		"socket.io": "^2.3.0",
+		"socket.io-client": "^2.3.0",
+		"uuid": "^8.0.0"
+	},
+	"scripts": {
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [ ">0.2%", "not dead", "not op_mini all" ],
+		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+	},
+	"description": "Group project by David, Jose, Carlos, Abraham",
+	"main": "index.js",
+	"devDependencies": {},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Josefbautista94/Messaging-App.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Josefbautista94/Messaging-App/issues"
+	},
+	"homepage": "https://github.com/Josefbautista94/Messaging-App#readme"
 }
