--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,11 @@
 {
   "development": {
-    "username": "postgres",
-    "password": "postgres",
+    "username": "root",
+    "password": "Mh20151118",
     "database": "chatapp",
     "host": "127.0.0.1",
-    "dialect": "postgres"
+    "dialect": "mysql",
+    "port": "3306"
   },
   "test": {
     "username": "root",
